Fix spacing for social share div

--- a/css/less/layout.less
+++ b/css/less/layout.less
@@ -2987,7 +2987,8 @@ hr.space {
         }
 
         .team-social-share{
-            margin-top: 40px;
+            /* margin-top: 40px; */
+            margin-top: 0px;
             a{
                 border: 1px solid @light-border-color;
                 display: inline-block;
